--- a/index.html
+++ b/index.html
@@ -3,99 +3,128 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dhruvin Katakiya - Portfolio</title>
+  <title>Dhruvin Katakiya | Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
+    * {
+      box-sizing: border-box;
+      scroll-behavior: smooth;
+    }
+
     body {
       margin: 0;
-      padding: 0;
       font-family: 'Poppins', sans-serif;
-      background: #f5f7fa;
-      color: #333;
+      background: #f9f9f9;
+      color: #222;
     }
 
-    header, section {
+    header {
+      background: linear-gradient(to right, #00246B, #0051a2);
+      color: white;
+      padding: 60px 20px 40px;
       text-align: center;
-      padding: 40px 20px;
     }
 
-    h1 {
-      font-size: 2.5rem;
+    header h1 {
+      font-size: 2.8rem;
+      margin: 0;
+    }
+
+    header h3 {
+      font-weight: 400;
+      margin-top: 10px;
+    }
+
+    .gif {
+      margin-top: 30px;
+      border-radius: 12px;
+      width: 320px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+    }
+
+    section {
+      padding: 50px 20px;
+      text-align: center;
+    }
+
+    h2 {
       color: #00246B;
-    }
-
-    h3 {
-      font-weight: 500;
-      color: #555;
-    }
-
-    img.gif {
-      width: 300px;
-      border-radius: 10px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-      margin: 20px 0;
-    }
-
-    .divider {
-      width: 80%;
-      height: 2px;
-      background: linear-gradient(to right, #00246B, transparent);
-      margin: 40px auto;
-    }
-
-    .section-title {
-      font-size: 1.8rem;
-      color: #00246B;
+      font-size: 2rem;
       margin-bottom: 20px;
     }
 
-    .contact-icons img {
-      margin: 0 10px;
-      transition: transform 0.2s;
+    p {
+      font-size: 1.05rem;
+      margin: 10px 0;
     }
 
-    .contact-icons img:hover {
-      transform: scale(1.2);
+    .divider {
+      height: 2px;
+      background: linear-gradient(to right, #00246B, transparent);
+      width: 80%;
+      margin: 40px auto;
     }
 
-    .skills img,
-    .tools img {
+    .icons img {
       height: 40px;
-      margin: 10px;
+      margin: 8px;
       transition: transform 0.3s ease;
     }
 
-    .skills img:hover,
-    .tools img:hover {
-      transform: scale(1.2);
+    .icons img:hover {
+      transform: scale(1.15);
     }
 
     .stats img {
-      max-width: 100%;
+      width: 90%;
+      max-width: 420px;
       margin: 10px;
       border-radius: 8px;
-      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.05);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
     }
 
-    .support img {
-      height: 50px;
-      margin-top: 10px;
+    .btn {
+      display: inline-block;
+      background: #FFDD00;
+      color: #222;
+      padding: 10px 24px;
+      margin-top: 16px;
+      font-weight: bold;
+      border-radius: 6px;
+      text-decoration: none;
+      transition: 0.3s ease;
+    }
+
+    .btn:hover {
+      background: #f8c300;
     }
 
     .fun-fact {
       font-style: italic;
-      font-size: 1.1rem;
       color: #444;
-      padding: 0 20px;
+      max-width: 600px;
+      margin: 0 auto;
+    }
+
+    footer {
+      background: #00246B;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      margin-top: 50px;
     }
 
     @media (max-width: 768px) {
-      h1 {
+      header h1 {
         font-size: 2rem;
       }
 
-      .skills img, .tools img {
-        height: 30px;
+      .gif {
+        width: 240px;
+      }
+
+      .icons img {
+        height: 32px;
       }
     }
   </style>
@@ -107,29 +136,29 @@
     <h3>💻 Software Developer | 🎨 UI/UX Designer</h3>
     <img class="gif" src="https://i.pinimg.com/originals/e1/f3/41/e1f3413bf5036045713341394f617225.gif" alt="Coding GIF" />
     <p>
-      <img src="https://komarev.com/ghpvc/?username=dhruvinkatakiya&label=Profile%20views&color=0e75b6&style=flat" alt="Profile Views" />
+      <img src="https://komarev.com/ghpvc/?username=dhruvinkatakiya&label=Profile%20views&color=ffffff&style=flat" alt="Profile Views" />
     </p>
   </header>
 
   <div class="divider"></div>
 
   <section>
-    <h2 class="section-title">🚀 About Me</h2>
+    <h2>🚀 About Me</h2>
     <p>🔭 Currently building <strong>Hospital Helper</strong></p>
-    <p>🎯 Specialize in <strong>React, Flutter, UI-UX, SCSS, Tailwind CSS</strong></p>
+    <p>🎯 Focused on <strong>React, Flutter, SCSS, Tailwind CSS</strong></p>
     <p>📫 Reach me at: <a href="mailto:dev.dhruvin.0.1@gmail.com">dev.dhruvin.0.1@gmail.com</a></p>
   </section>
 
   <div class="divider"></div>
 
   <section>
-    <h2 class="section-title">🌐 Connect with Me</h2>
-    <div class="contact-icons">
+    <h2>🌐 Connect with Me</h2>
+    <div class="icons">
       <a href="https://linkedin.com/in/dhruvinkatakiya" target="_blank">
-        <img src="https://skillicons.dev/icons?i=linkedin" height="30" />
+        <img src="https://skillicons.dev/icons?i=linkedin" />
       </a>
       <a href="mailto:dev.dhruvin.0.1@gmail.com" target="_blank">
-        <img src="https://img.icons8.com/color/48/gmail--v1.png" height="30" />
+        <img src="https://img.icons8.com/color/48/gmail--v1.png" />
       </a>
     </div>
   </section>
@@ -137,14 +166,15 @@
   <div class="divider"></div>
 
   <section>
-    <h2 class="section-title">🧠 Skills & Tools</h2>
+    <h2>🧠 Skills & Tools</h2>
+
     <h3>👨‍💻 Languages & Frameworks</h3>
-    <div class="skills">
+    <div class="icons">
       <img src="https://skillicons.dev/icons?i=html,css,scss,tailwind,js,react,flutter,dart,php,java,cpp,c,python,arduino" />
     </div>
 
     <h3>🛠️ Dev Tools & Platforms</h3>
-    <div class="tools">
+    <div class="icons">
       <img src="https://skillicons.dev/icons?i=git,github,mysql,mongodb,firebase,figma,postman,androidstudio,vscode,aws,docker" />
       <img src="https://registry.npmmirror.com/@lobehub/icons-static-png/1.56.0/files/dark/n8n-color.png" alt="n8n" height="40" />
       <img src="https://img.icons8.com/color/48/canva.png" alt="canva" height="40" />
@@ -154,26 +184,28 @@
   <div class="divider"></div>
 
   <section class="stats">
-    <h2 class="section-title">📈 GitHub Stats</h2>
+    <h2>📈 GitHub Stats</h2>
     <img src="https://github-readme-stats.vercel.app/api?username=dhruvinkatakiya&show_icons=true&theme=default" />
     <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=dhruvinkatakiya&layout=compact" />
   </section>
 
   <div class="divider"></div>
 
-  <section class="support">
-    <h2 class="section-title">☕ Support Me</h2>
-    <a href="https://www.buymeacoffee.com/dhruvinkatakiya" target="_blank">
-      <img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" />
-    </a>
+  <section>
+    <h2>☕ Support Me</h2>
+    <a class="btn" href="https://www.buymeacoffee.com/dhruvinkatakiya" target="_blank">Buy Me a Coffee</a>
   </section>
 
   <div class="divider"></div>
 
   <section>
-    <h2 class="section-title">⚡ Fun Fact</h2>
+    <h2>⚡ Fun Fact</h2>
     <p class="fun-fact">“I design it, code it, automate it, and ship it.”<br/>Turning ideas into real, interactive products is my happy place 🧠✨</p>
   </section>
+
+  <footer>
+    &copy; 2025 Dhruvin Katakiya · Built with ❤️ on GitHub Pages
+  </footer>
 
 </body>
 </html>
