--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     p {
       font-size: 1.05rem;
       margin: 10px 0;
+      line-height: 1.6;
     }
 
     .divider {
@@ -73,30 +74,6 @@
 
     .icons img:hover {
       transform: scale(1.15);
-    }
-
-    .stats img {
-      width: 90%;
-      max-width: 420px;
-      margin: 10px;
-      border-radius: 8px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-    }
-
-    .btn {
-      display: inline-block;
-      background: #FFDD00;
-      color: #222;
-      padding: 10px 24px;
-      margin-top: 16px;
-      font-weight: bold;
-      border-radius: 6px;
-      text-decoration: none;
-      transition: 0.3s ease;
-    }
-
-    .btn:hover {
-      background: #f8c300;
     }
 
     .fun-fact {
@@ -127,40 +104,32 @@
         height: 32px;
       }
     }
+
+    a {
+      color: #0051a2;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
 
   <header>
     <h1>Hi 👋, I'm Dhruvin Katakiya</h1>
-    <h3>💻 Software Developer | 🎨 UI/UX Designer</h3>
+    <h3>Software Developer · UI/UX Designer</h3>
     <img class="gif" src="https://i.pinimg.com/originals/e1/f3/41/e1f3413bf5036045713341394f617225.gif" alt="Coding GIF" />
-    <p>
-      <img src="https://komarev.com/ghpvc/?username=dhruvinkatakiya&label=Profile%20views&color=ffffff&style=flat" alt="Profile Views" />
-    </p>
   </header>
 
   <div class="divider"></div>
 
   <section>
     <h2>🚀 About Me</h2>
-    <p>🔭 Currently building <strong>Hospital Helper</strong></p>
-    <p>🎯 Focused on <strong>React, Flutter, SCSS, Tailwind CSS</strong></p>
-    <p>📫 Reach me at: <a href="mailto:dev.dhruvin.0.1@gmail.com">dev.dhruvin.0.1@gmail.com</a></p>
-  </section>
-
-  <div class="divider"></div>
-
-  <section>
-    <h2>🌐 Connect with Me</h2>
-    <div class="icons">
-      <a href="https://linkedin.com/in/dhruvinkatakiya" target="_blank">
-        <img src="https://skillicons.dev/icons?i=linkedin" />
-      </a>
-      <a href="mailto:dev.dhruvin.0.1@gmail.com" target="_blank">
-        <img src="https://img.icons8.com/color/48/gmail--v1.png" />
-      </a>
-    </div>
+    <p>I’m a passionate software developer and UI/UX designer who enjoys creating clean, functional, and interactive digital experiences.</p>
+    <p>Currently building <strong>Hospital Helper</strong>, a smart medical assistant app to streamline patient management.</p>
+    <p>I specialize in <strong>React, Flutter, SCSS, Tailwind CSS</strong>, and modern web tools.</p>
   </section>
 
   <div class="divider"></div>
@@ -168,12 +137,12 @@
   <section>
     <h2>🧠 Skills & Tools</h2>
 
-    <h3>👨‍💻 Languages & Frameworks</h3>
+    <h3>Languages & Frameworks</h3>
     <div class="icons">
       <img src="https://skillicons.dev/icons?i=html,css,scss,tailwind,js,react,flutter,dart,php,java,cpp,c,python,arduino" />
     </div>
 
-    <h3>🛠️ Dev Tools & Platforms</h3>
+    <h3>Tools & Platforms</h3>
     <div class="icons">
       <img src="https://skillicons.dev/icons?i=git,github,mysql,mongodb,firebase,figma,postman,androidstudio,vscode,aws,docker" />
       <img src="https://registry.npmmirror.com/@lobehub/icons-static-png/1.56.0/files/dark/n8n-color.png" alt="n8n" height="40" />
@@ -183,17 +152,10 @@
 
   <div class="divider"></div>
 
-  <section class="stats">
-    <h2>📈 GitHub Stats</h2>
-    <img src="https://github-readme-stats.vercel.app/api?username=dhruvinkatakiya&show_icons=true&theme=default" />
-    <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=dhruvinkatakiya&layout=compact" />
-  </section>
-
-  <div class="divider"></div>
-
   <section>
-    <h2>☕ Support Me</h2>
-    <a class="btn" href="https://www.buymeacoffee.com/dhruvinkatakiya" target="_blank">Buy Me a Coffee</a>
+    <h2>📬 Contact</h2>
+    <p>📧 Email me: <a href="mailto:dev.dhruvin.0.1@gmail.com">dev.dhruvin.0.1@gmail.com</a></p>
+    <p>🔗 Connect on <a href="https://linkedin.com/in/dhruvinkatakiya" target="_blank">LinkedIn</a></p>
   </section>
 
   <div class="divider"></div>
@@ -204,7 +166,7 @@
   </section>
 
   <footer>
-    &copy; 2025 Dhruvin Katakiya · Built with ❤️ on GitHub Pages
+    &copy; 2025 Dhruvin Katakiya · Crafted with care and code
   </footer>
 
 </body>
